Small fixes on mobile devices

--- a/css/queries.css
+++ b/css/queries.css
@@ -77,7 +77,6 @@
   .hero__scroll-down {
     position: absolute;
     width: 100%;
-    bottom: 0;
   }
 
   .hero__scroll-down i,
@@ -121,7 +120,6 @@
   .newsletter__container {
     display: grid;
     align-items: center;
-    column-gap: 1rem;
     grid-template-columns: repeat(2, 1fr);
   }
 
@@ -145,14 +143,14 @@
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    left: 40px;
+    left: 30px;
     background: rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(20px);
     box-shadow: 0 0 20px 0 rgba(45, 45, 45, 0.5);
     border-radius: 0.2rem;
     z-index: 1;
     margin-top: 1rem;
-    padding: 4rem 0 4rem 3rem;
+    padding: 4rem 0 4rem 2rem;
   }
 
   .newsletter__form {
